--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-# Created by https://www.toptal.com/developers/gitignore/api/django,venv
-# Edit at https://www.toptal.com/developers/gitignore?templates=django,venv
+plan.md
 
 ### Django ###
 *.log
